kubernetes/apps/app-nodesjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-nodesjs-service
  namespace: app-dev
  labels:
    app: app-nodesjs
    environment: dev
    platform: multi-cloud
spec:
  type: ClusterIP
  selector:
    app: app-nodesjs
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
